--- a/package.json
+++ b/package.json
@@ -2,17 +2,12 @@
   "name": "currencyapp2",
   "version": "1.1.1",
   "description": "CurrencyApp2: An Ionic project",
-  "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "grunt": "~1.0.0",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-uglify": "~1.0.1",
+    "grunt-contrib-imagemin": "~1.0.1"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
