--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "currencyapp2",
   "version": "1.1.1",
   "description": "CurrencyApp2: An Ionic project",
-  "dependencies": {},
+  "dependencies": {
+    "time-grunt": "~1.3.0"
+  },
   "devDependencies": {
-    "grunt": "~1.0.0",
+    "grunt": "~1.0.1",
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-uglify": "~1.0.1",
-    "grunt-contrib-imagemin": "~1.0.1"
+    "grunt-contrib-imagemin": "~1.0.1",
+    "load-grunt-config": "~0.19.2",
+    "grunt-concurrent": "~2.3.0",
+    "jshint-stylish": "~2.2.0",
+    "jshint": "~2.9.2",
+    "grunt-contrib-jshint": "~1.0.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
